--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="col-lg-12 col-12 mt-2">
         <p id="text-intro-1sec">
-          These pages describe the JUST AI Network's attempts at mapping the field of AI and data ethics. It may be considered a living document in two ways. On the one hand, we will keep adding materials, images and links to this page until the JUST AI Project's conclusion. On the other hand, we invite others to use our data and tools to interrogate, question and remake our methods and results to produce other representations, questions and perspectives.<br><br>Our visualisations, data and resources will be released here on 28 June 2021.<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          These pages describe the JUST AI Network's attempts at mapping the field of AI and data ethics. It may be considered a living document in two ways. On the one hand, we will keep adding materials, images and links to this page until the JUST AI Project's conclusion. On the other hand, we invite others to use our data and tools to interrogate, question and remake our methods and results to produce other representations, questions and perspectives.<br><br>Our visualisations, data and resources will be released here gradually until the end of June  2021.
             
         </p>
         
